# gtags-lsp

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
doc/: database.md
src/: defines.h  main.c  main.rs  runtime.c  runtime.h  version.c  version.h
src/method/: __init__.c  __init__.h  cancelrequest.c  completion.rs  definition.rs  did_change.rs  did_close.rs  did_open.rs  document_symbol.rs  exit.c  implementation.rs  initialize.c  initialize.rs  initialized.rs  mod.rs  references.rs  set_trace.c  shutdown.c  symbol.rs  textdocument_didchange.c  textdocument_didclose.c  textdocument_didopen.c  textdocument_didsave.c  type_definition.rs  workspace_didchangeworkspacefolders.c
src/task/: __init__.c  __init__.h  update_tags.c
src/utils/: alloc.c  alloc.h  execute.c  execute.h  io.c  io.h  log.c  log.h  lsp_error.c  lsp_error.h  lsp_file.c  lsp_file.h  lsp_msg.c  lsp_msg.h  lsp_parser.c  lsp_parser.h  lsp_work.c  lsp_work.h
