[package]
name = "tags-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tower-lsp = "0.20.0"
clap = { version = "4.4.8", features = ["default", "std", "color", "derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde_json = "1.0.108"
regex = "1.10.2"
